2005-10-27  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: added proper URL for JavaAI and Java3D

2005-10-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* SelfUpdate.pm: Fix some scoping problems.

2005-10-24  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Add new buildlocks wiki URL to buildlock msgs.

2005-10-24  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Use local() instead of temp var when we need to
	swap %ENV temporarily to prevent runtime warning from certain
	versions of perl.

2005-10-24  Daniel Macks  <dmacks@netspace.org>

	* Checksum.pm: get_all_checksums: don't crash if a back-end isn't
	implemented.

2005-10-21  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Remember Fink::PkgVersion->dpkg_changed when calling
	dpkg directly.

2005-10-21  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Make buildlock lock-packages
	Essential:yes to prevent accidental or apt-get removal; use
	--force-remove-essential to remove them.

2005-10-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Switch get_description API to use named options.

2005-10-19  Daniel Macks  <dmacks@netspace.org>

	* Checksum/SHA1.pm, Checksum/SHA256.pm: don't try to -x if there
	is no command defined.

2005-10-17  Daniel Macks  <dmacks@netspace.org>

	* Checksum.pm: new class methods get_all_checksums and parse_checksum.
	NetAccess.pm, PkgVersion.pm: use get_all_checksums to look up
	actual checksum when it doesn't match expected.

2005-10-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Bootstrap.pm, Checksum.pm, Engine.pm, NetAccess.pm, PkgVersion.pm,
	Services.pm, Validation.pm, Checksum/*.pm: now handles MD5, SHA1,
	and SHA256 as plugins; packages using Source*-Checksum: now work
	properly; what's left to do is handle mirror URLs, and whether I
	care to do dep-checking.

2005-10-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, Services.pm, Checksum.pm, Checksum/MD5.pm: refactored the